syntax = "proto3";

option csharp_namespace = "grpc.contracts";

package Contract1;

// The greeting service definition.
service Contractor1{
  // Sends a greeting
  rpc SayHelloCont(HelloRequest) returns (HelloReply);
  //   rpc GuessNumber(GuessNumberRequest) returns (GuessNumberResponse);
}

// The request message containing the user's name.
message HelloRequest { string name = 1; }

// The response message containing the greetings.
message HelloReply { string message = 1; }

// message GuessNumberRequest { int32 number = 1; }

// message GuessNumberResponse { int32 number = 1; }